--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
+    "@types/express-validator": "^2.20.33",
     "@types/node": "^22.15.21",
     "drizzle-kit": "^0.31.1",
     "prisma": "^6.8.2",
