--- a/restaurant-service/package.json
+++ b/restaurant-service/package.json
@@ -19,11 +19,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
+    "@types/express-validator": "^2.20.33",
     "@types/jsonwebtoken": "^9.0.9",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0"
