--- a/user-service/package.json
+++ b/user-service/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/express-validator": "^2.20.33",
     "@types/jsonwebtoken": "^9.0.9",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
