feat: update prisma:generate script to specify schema path in package.json for all services

--- a/delivery-service/package.json
+++ b/delivery-service/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
-    "prisma:generate": "prisma generate",
+    "prisma:generate": "prisma generate --schema=../shared/database/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate deploy",
     "postinstall": "npm run prisma:generate"
   },
