--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,12 @@
     "extends": "./tsconfig.base.json",
     "compilerOptions": {
         "outDir": "./dist",
-        "rootDir": "./",
-        "composite": true
+        "composite": true,
+        "module": "commonjs",
+        "target": "es2020",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true
     },
     "include": [
         "shared/**/*",
