--- a/delivery-service/tsconfig.json
+++ b/delivery-service/tsconfig.json
@@ -2,8 +2,15 @@
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
         "outDir": "dist",
+        "rootDir": "..",
+        "module": "commonjs",
+        "target": "es2020",
+        "esModuleInterop": true,
+        "strict": true,
+        "skipLibCheck": true
     },
     "include": [
-        "src/**/*"
+        "src",
+        "../shared"
     ]
 }
