--- a/restaurant-service/tsconfig.json
+++ b/restaurant-service/tsconfig.json
@@ -7,7 +7,12 @@
         "target": "es2020",
         "esModuleInterop": true,
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "paths": {
+            "@shared/*": [
+                "shared/*"
+            ]
+        }
     },
     "include": [
         "src",
