--- a/user-service/package.json
+++ b/user-service/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/user-service/src/server.js",
+    "start": "node -r tsconfig-paths/register dist/user-shared/src/server.js",
     "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
     "prisma:generate": "prisma generate --schema=../shared/database/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate deploy",
