--- a/restaurant-service/tsconfig.json
+++ b/restaurant-service/tsconfig.json
@@ -1,13 +1,14 @@
 {
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
-        "outDir": "dist",
-        "rootDir": "..", // goes one level up to fooodiii-api
+        "outDir": "./dist",
+        "rootDir": "..",
         "module": "commonjs",
         "target": "es2020",
         "esModuleInterop": true,
         "strict": true,
         "skipLibCheck": true,
+        "baseUrl": "..",
         "paths": {
             "@shared/*": [
                 "shared/*"
@@ -15,7 +16,11 @@
         }
     },
     "include": [
-        "src",
-        "../shared"
+        "src/**/*",
+        "../shared/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
     ]
 }
