--- a/user-service/tsconfig.json
+++ b/user-service/tsconfig.json
@@ -1,21 +1,35 @@
 {
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
-        "outDir": "dist",
-        "rootDir": "..",
+        "target": "ES2020",
         "module": "commonjs",
-        "target": "es2020",
-        "esModuleInterop": true,
+        "lib": [
+            "ESNext"
+        ],
+        "moduleResolution": "node",
+        "outDir": "./dist",
+        "rootDir": ".",
         "strict": true,
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
         "skipLibCheck": true,
+        "baseUrl": ".",
         "paths": {
             "@shared/*": [
-                "shared/*"
+                "../../shared/*"
             ]
         }
     },
     "include": [
-        "src",
-        "../shared"
-    ]
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ],
+    "ts-node": {
+        "require": [
+            "tsconfig-paths/register"
+        ]
+    }
 }
