refactor: restructure project by removing shared database files and updating service configurations
- Deleted package.json from the root directory.
- Updated .gitignore files in restaurant-service and user-service to include generated Prisma files.
- Modified package.json in restaurant-service and user-service to streamline build and start scripts.
- Refactored database connection imports in restaurant-service and user-service to use local config files.
- Removed shared database files including Prisma schema, migrations, and connection logic.
- Added new Prisma schema files in restaurant-service and user-service.
- Introduced db.ts configuration files in restaurant-service and user-service for database connection management.
- Added .env files in user-service for environment variable management.

--- a/restaurant-service/package.json
+++ b/restaurant-service/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && tsc-alias",
-    "start": "node -r tsconfig-paths/register dist/restaurant-service/src/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
-    "prisma:generate": "prisma generate --schema=../shared/database/prisma/schema.prisma",
+    "build": "tsc",
+    "start": "node -r tsconfig-paths/register dist/server.js",
+    "clean": "rm -rf dist",
+    "lint": "tsc --noEmit",
+    "dev": "ts-node-dev src/server.ts",
+    "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "postinstall": "npm run prisma:generate"
   },
