--- a/user-service/tsconfig.json
+++ b/user-service/tsconfig.json
@@ -1,5 +1,4 @@
 {
-    "extends": "../tsconfig.base.json",
     "compilerOptions": {
         "target": "ES2020",
         "module": "commonjs",
@@ -13,12 +12,7 @@
         "esModuleInterop": true,
         "resolveJsonModule": true,
         "skipLibCheck": true,
-        "baseUrl": ".",
-        "paths": {
-            "@shared/*": [
-                "../../shared/*"
-            ]
-        }
+        "baseUrl": "./src",
     },
     "include": [
         "src/**/*"
@@ -26,10 +20,5 @@
     "exclude": [
         "node_modules",
         "dist"
-    ],
-    "ts-node": {
-        "require": [
-            "tsconfig-paths/register"
-        ]
-    }
+    ]
 }
