--- a/delivery-service/package.json
+++ b/delivery-service/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && tsc-alias",
-    "start": "node -r tsconfig-paths/register dist/delivery-service/src/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
-    "prisma:generate": "prisma generate --schema=../shared/database/prisma/schema.prisma",
+    "build": "tsc",
+    "start": "node -r tsconfig-paths/register dist/server.js",
+    "clean": "rm -rf dist",
+    "lint": "tsc --noEmit",
+    "dev": "ts-node-dev src/server.ts",
+    "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "postinstall": "npm run prisma:generate"
   },
@@ -27,7 +29,7 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.15.21",
+    "@types/node": "^22.15.24",
     "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
