--- a/delivery-service/tsconfig.json
+++ b/delivery-service/tsconfig.json
@@ -1,23 +1,21 @@
 {
-    "extends": "../tsconfig.base.json",
     "compilerOptions": {
-        "outDir": "./dist",
-        "rootDir": "..",
+        "target": "ES2020",
         "module": "commonjs",
-        "target": "es2020",
-        "esModuleInterop": true,
+        "lib": [
+            "ESNext"
+        ],
+        "moduleResolution": "node",
+        "outDir": "./dist",
+        "rootDir": ".",
         "strict": true,
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
         "skipLibCheck": true,
-        "baseUrl": "..",
-        "paths": {
-            "@shared/*": [
-                "shared/*"
-            ]
-        }
+        "baseUrl": "./src",
     },
     "include": [
-        "src/**/*",
-        "../shared/**/*"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules",
