--- a/user-service/package.json
+++ b/user-service/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && tsc-alias",
-    "start": "node -r tsconfig-paths/register dist/user-service/src/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
-    "prisma:generate": "prisma generate --schema=../shared/database/prisma/schema.prisma",
+    "build": "tsc",
+    "start": "node -r tsconfig-paths/register dist/server.js",
+    "clean": "rm -rf dist",
+    "lint": "tsc --noEmit",
+    "dev": "ts-node-dev src/server.ts",
+    "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "postinstall": "npm run prisma:generate"
   },
