--- a/delivery-service/package.json
+++ b/delivery-service/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node -r tsconfig-paths/register dist/server.js",
+    "start": "node -r tsconfig-paths/register dist/src/server.js",
     "clean": "rm -rf dist",
     "lint": "tsc --noEmit",
     "dev": "ts-node-dev src/server.ts",
