--- a/user-service/package.json
+++ b/user-service/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node -r tsconfig-paths/register dist/server.js",
+    "start": "node -r tsconfig-paths/register dist/src/server.js",
     "clean": "rm -rf dist",
     "lint": "tsc --noEmit",
     "dev": "ts-node-dev src/server.ts",
