--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   user-service:
     build:
@@ -8,7 +6,8 @@ services:
     ports:
       - "3001:3001"
     environment:
-      - DATABASE_URL=${DATABASE_URL}:
+      - DATABASE_URL=${DATABASE_URL}
+
   restaurant-service:
     build:
       context: ./restaurant-service
@@ -16,8 +15,7 @@ services:
     ports:
       - "3002:3002"
     environment:
-      - DATABASE_URL=${DATABASE_URL}:
-
+      - DATABASE_URL=${DATABASE_URL}
 
   delivery-service:
     build:
@@ -26,4 +24,4 @@ services:
     ports:
       - "3003:3003"
     environment:
-      - DATABASE_URL=${DATABASE_URL}:
+      - DATABASE_URL=${DATABASE_URL}
